::Exclude files bin

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 target/
 !.mvn/wrapper/maven-wrapper.jar
 
@@ -23,7 +22,7 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-=======
+
 # Compiled class file
 *.class
 
@@ -44,6 +43,4 @@ nbdist/
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
->>>>>>> b457ee3115748ca79e2efc6c229424784c8593c0
+bin/
